# pytest_ci_learn

./: .flake8  .gitignore  README.md  dockerfile  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
28931409814/: index.html
28931409814/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
28931409814/data/test-cases/: 110fed4730797671.json  1aeb47ddc41b5b47.json  2b1d03f86eb56056.json  3dfb00e7187b0e68.json  4b92e706d9b0a3ed.json  4bc89fa89d1427d4.json  54db0693ad1cfb1a.json  54ee3ff570a6354c.json  62cb95a720d8ef93.json  6e0e5cfff7c5367.json  6f3cec76437de5a8.json  809262fe9fbf144e.json  860279684abd985f.json  8d3da2a3f8591e0f.json  bc6b57681b184460.json  bcf00824d238b0d9.json  c6a33df05994a86a.json  d00aceb367097de7.json  da596652ef2bf14a.json  e52e5693160805a1.json  e981c2b3b7c831fd.json
28931409814/export/: influxDbData.txt  prometheusData.txt
28931409814/history/: history.json
28931409814/widgets/: behaviors.json  duration.json  severity.json  suites.json  summary.json
28934518423/: index.html
28934518423/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
28934518423/export/: influxDbData.txt  prometheusData.txt
28934518423/history/: history.json  retry-trend.json
28934518423/widgets/: behaviors.json  duration-trend.json  history-trend.json  severity.json  status-chart.json  summary.json
app/: calculator.py
testcases/: conftest.py  test_calculator.py  test_multiply.py  test_user.py
(+26 files in other folders)
